@@ -1,3 +1,12 @@
+2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
+
+	* memmaps.c: refactor some code so that multiple dialogs
+	can be present at the same time, and selecting multiple
+	processes will show multiple dialogs
+
+	* callbacks.c: save the last clicked process as the selected 
+	process to show in the infoview
+
 2001-11-09  Kevin Vandersloot <kfv101@psu.edu>
 
 	More stable stuff, not quite finished:
